--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,13 @@
 /* Navbar */
+/* .navbar {
+  z-index: 1;
+  position: relative;
+} */
+
 .navbar-brand {
   font-family: monospace;
   font-size: 32px;
-}
+} */
 
 /* Jumbotron */
 .jumbotron {
@@ -10,6 +15,22 @@
   background-size: cover;
   height: 380px;
   text-align: center;
+  position: relative;
+}
+
+.jumbotron .container {
+  z-index: 1;
+  position: relative;
+}
+
+.jumbotron::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+  position: absolute;
+  bottom: 0;
 }
 
 .jumbotron .display-4 {
@@ -29,6 +50,12 @@
 .tombol {
   text-transform: uppercase;
   border-radius: 20px;
+  background-color: rgb(93, 136, 177);
+}
+
+.tombol:hover {
+  background-color: #0b63dc;
+  transition: all 0.5s;
 }
 
 /* versi desktop */
@@ -41,6 +68,7 @@
   .nav-link {
     text-transform: uppercase;
     margin-right: 20px;
+    transition: all 0.5s;
   }
 
   .nav-link:hover::after{
@@ -56,5 +84,13 @@
   .jumbotron {
     margin-top: -75px;
     height: 480px;
+  }
+
+  .carousel-item {
+    height: 480px;
+  }
+
+  .carousel-item img {
+    margin-top: -50px;
   }
 }
