--- a/stylesheet.css
+++ b/stylesheet.css
@@ -100,22 +100,18 @@
     text-align: center;
   }
 
-  #gallery .container h1{
+  .container.bawah{
     text-align: center;
-    font-family: raleway;
-    margin-bottom: 38px;
-  }
-  
-  #gallery .container .row #dua.col-lg-6.col-md-6.col-sm-6.col-xs-6{
-    padding-top:31px;
+    margin-top: 80px;
+    margin-bottom: 80px;
   }
 
   #artikel {
-    margin-top: 70px;
+    margin-top: 50px;
     background-color: #f9f8f8;
     padding-top: 50px;
-    padding-bottom: 25px;
-    margin-bottom: 50px;
+    padding-bottom: 5px;
+    margin-bottom: 10px;
   }
 
   .media {
@@ -131,7 +127,8 @@
 
   .ling {
     text-transform: uppercase;
-    border-radius: 10px;
+    border-radius: 15px;
+    margin-top: -15px;
     background-color: rgb(32, 141, 77);
   }
 
