--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,9 +58,52 @@
   transition: all 0.5s;
 }
 
-
 /* versi desktop */
 @media (min-width: 992px) {
+  .body {
+    color: #141414;
+  }
+  .container.gallery-container {
+      background-color: #fff;
+      color: #35373a;
+      min-height: 100vh;
+      border-radius: 20px;
+      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+  }
+
+  .gallery-container h1 {
+      text-align: center;
+      margin-top: 70px;
+      font-family: 'Droid Sans', sans-serif;
+      font-weight: bold;
+      padding-top: 30px;
+  }
+
+  .tz-gallery {
+      padding: 40px;
+  }
+
+  .tz-gallery .lightbox img {
+      width: 100%;
+      margin-bottom: 30px;
+      transition: 0.2s ease-in-out;
+      box-shadow: 0 2px 3px rgba(0,0,0,0.2);
+  }
+
+
+  .tz-gallery .lightbox img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 15px rgba(0,0,0,0.3);
+  }
+
+  .tz-gallery img {
+      border-radius: 4px;
+  }
+
+  .baguetteBox-button {
+      background-color: transparent !important;
+  }
+
   .navbar-brand, .nav-link {
     color: white !important;
     text-shadow: 1px 1px 1px rgb(0, 0, 0, 0.1);
@@ -104,14 +147,19 @@
     text-align: center;
     margin-top: 80px;
     margin-bottom: 80px;
+    padding: 30px 30px 30px 30px;
+    background-color: rgb(21, 101, 121);
+    color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
   }
 
   #artikel {
     margin-top: 50px;
     background-color: #f9f8f8;
     padding-top: 50px;
-    padding-bottom: 5px;
-    margin-bottom: 10px;
+    padding-bottom: 50px;
+    margin-bottom: 50px;
   }
 
   .media {
